# polishr

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
.cursor/rules/: agents-md-update.mdc
src/: App.tsx  TriggerWindow.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ax_text.rs  commands.rs  lib.rs  main.rs  tray.rs
src/components/: AccessibilityGuide.tsx  DiffView.tsx  Editor.tsx  ModeSelector.tsx  ResultPanel.tsx  Settings.tsx  TitleBar.tsx
src/core/diff/: differ.ts
src/core/lang/: detect.ts
src/core/llm/: client.ts  stream.ts  types.ts
src/core/prompts/: improve.ts  index.ts  polish-en.ts  polish-zh.ts  rephrase.ts  translate.ts
src/hooks/: useHistory.ts  usePolish.ts  useSettings.ts
src/pages/: DesktopApp.tsx  HistoryPage.tsx  PreferencesPage.tsx  ProvidersPage.tsx
src/styles/: globals.css
src/windows/main/: App.tsx
src/windows/settings/: DesktopApp.tsx
src/windows/trigger/: TriggerWindow.css  TriggerWindow.tsx
website/: package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/: CallToAction.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Providers.tsx
