[package]
name = "polishr"
version = "0.1.0"
description = "A Grammarly-like grammar polishing and translation desktop app"
authors = ["polishr"]
edition = "2021"

[lib]
name = "polishr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
